@@ -1,5 +1,7 @@
 Version 0.11.2 (legolas558,pvhl)
-* configurable and custom hotkeys
+* fixed issue 2981069 glitch when editing menu (reported by deroock)
+* fixed WSIF import issue with WoaS:: pages
+* configurable and custom access keys
 * preliminary support for section anchors in querystring page requests
 * fixed import issue related to 'var' declarations inside content pages (found by deroock)
 * converted source code from array notation to dot notation (pvhl)
